fixed redis stream, fixed swagger
