# internal/model/models.go
@@ -13,9 +13,9 @@ type Person struct {
 
 // PersonRequest contains request for person binding
 type PersonRequest struct {
-	Salary     int       `json:"salary" bson:"salary" validate:"required,numeric,min=100,max=100000"`
-	Married    bool      `json:"married" bson:"married"`
-	Profession string    `json:"profession" bson:"profession" validate:"required,min=3,max=30"`
+	Salary     int    `json:"salary" bson:"salary" validate:"required,numeric,min=100,max=100000"`
+	Married    bool   `json:"married" bson:"married"`
+	Profession string `json:"profession" bson:"profession" validate:"required,min=3,max=30"`
 }
 
 // User contains an info about the user and will be written in a users table
@@ -28,6 +28,12 @@ type User struct {
 
 // UserRequest contains request for user binding
 type UserRequest struct {
-	Username     string    `json:"username" bson:"username" validate:"required,min=4,max=15"`
-	Password     string    `json:"password" bson:"password" validate:"required,min=4,max=15"`
+	Username string `json:"username" bson:"username" validate:"required,min=4,max=15"`
+	Password string `json:"password" bson:"password" validate:"required,min=4,max=15"`
+}
+
+// RefreshRequest contains request for user refresh method
+type RefreshRequest struct {
+	AccessToken  string `json:"accessToken" bson:"accessToken"`
+	RefreshToken string `json:"refreshToken" bson:"refreshToken"`
 }
